(library
 (name vcs_command)
 (public_name vcs-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_extended
  -open
  Or_error.Let_syntax)
 (libraries
  base
  core.command
  eio
  eio_main
  eio-writer
  fpath
  fpath-extended
  vcs
  vcs-git
  vcs-param)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx-let-fun)))
