(library
 (name vcs_command)
 (public_name vcs-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Vcs_eio_writer
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  eio
  eio_main
  fpath
  fpath-base
  vcs
  vcs-arg
  vcs-git
  vcs-private-libs-eio.eio-writer)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
