(library
 (name vcs_command)
 (public_name vcs-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Cmdlang)
 (libraries base cmdlang eio eio_main fpath-sexp0 vcs vcs-git-eio)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_sexp_conv ppx_sexp_value)))
