(library
 (name vcs_git)
 (public_name vcs-git)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_extended
  -open
  Or_error.Let_syntax)
 (libraries
  base
  eio
  eio-extended
  eio-process
  fpath
  fpath-extended
  git-cli
  vcs)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
